--- a/about.html
+++ b/about.html
@@ -45,11 +45,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="top-menu">
                 <ul>
                     <nav class="cl-effect-13">
-                        <li><a class="active" href="about.html">About</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="index.html">News</a></li>
-                        <li><a href="typography.html">Typo</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="about.html"><h4>企业概况</h4></a></li>
+                        <li><a href="gallery.html"><h4>业务介绍</h4></a></li>
+                        <li><a class="scroll" href="#news"><h4>团队风采</h4></a></li>
+                        <li><a href="contact.html"><h4>联系我们</h4></a></li>
                     </nav>
                 </ul>
             </div>
@@ -66,32 +65,36 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="clearfix"></div>
         <div class="banner-info text-center">
-            <h1><a href="index.html">Gardening</a></h1>
+            <h2><a href="index.html"> <img src="images/title.png" alt=""/></a></h2>
+            <h3> Shenzhen Great Strength Ocean Ship Store & Supply Co., Ltd</h3>
         </div>
     </div>
 </div>
 <!-- header-section-ends -->
 <!-- content-section-starts -->
 <div class="main">
-    <div class="about-content text-center">
+    <div class="about-content">
         <div class="who_we_are">
             <div class="container">
                 <div class="about-top">
-                    <header>
-                        <h3>Who We Are</h3>
+                    <header class="text-center">
+                        <h3>公司简介</h3>
                     </header>
-                    <h5>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus.
-                        Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque
-                        penatibus et magnis dis parturient montes, nascetur</h5>
-                    <p>Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum
-                        dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus
-                        eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer
-                        rutrum ante eu lacus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent
-                        vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit
-                        varius mi.</p>
-                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui.
-                        Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas
-                        tristique orci ac sem. Duis ultricies pharetra magna. </p>
+                    <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;深圳市鼎力远洋船舶设备有限公司（以下简称：鼎力远洋），成立于2005年，是经中华人民共和国工商总局批准,
+                        主要从事船舶伙食及物料供应，电子产品销售，船舶清洁，船员接送及船舶生活垃圾处理等各项业务的专业公司。</h5>
+                    <h5>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;公司总部深圳（现办公地点：深圳市盐田区沙头角二十四小区三栋103室），自成立伊始，就将目标制定为做最
+                        好的船舶服务及供应商。经过5年的不懈努力，现在已经与马士基，川崎汽船，阳明海运，长荣海运，韩进海运
+                        等多家船公司签订了长期的合作协议。目前，公司已具备雄厚的经济基础，强大的关系网络，完备的技术和人员
+                        配置，拥有一支业务经验丰富，服务水准优秀，高素质的员工队伍，能够根据各外轮船舶的订单需求提供专业、
+                        及时、高效的供应服务。</h5>
+                    <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;凭借着过硬的质量，周到的服务，现在我公司已成长为深圳港区最具竞争优势的外轮船舶供应商之一。我公司可
+                        为深圳所有港区提供二十四小时全天候的服务，公司所供应产品以合理的价格，优质的商品品质和完善的供应
+                        服务，受到港口及船方各界的认可和高度评价。</h5>
+                    <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“鼎力远洋”全体员工上下同心，努力打造
+                        “质优价廉，诚信热情，快捷高效”的服务旗舰品牌。公司本着“务实创新，以服务创造效益”的理念，愿真
+                        诚的合作，带来双方的共进与双赢。热忱欢迎海内外各界人士，本着互利互惠的原则，建立和发展业务合作关
+                        系，携手并进，共创双赢！</h5>
                 </div>
                 <div class="abt_img1"><img src="images/w1.jpg" alt=""></div>
                 <div class="abt_img2"><img src="images/w2.jpg" alt=""></div>
@@ -102,7 +105,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <div class="row">
                     <header>
-                        <h3>Why choose Us</h3>
+                        <h3>业务范围</h3>
                     </header>
                 </div>
                 <div class="col-md-4 whyus">
@@ -211,9 +214,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="footer">
     <div class="container">
         <div class="copyright text-center">
-            <p>Copyright &copy; 2015.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/"
-                                                                                        target="_blank" title="模板之家">模板之家</a>
-                - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+            <p>Copyright &copy; 2015.Company name All rights reserved.</p>
         </div>
     </div>
 </div>
