--- a/contact.html
+++ b/contact.html
@@ -74,56 +74,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!---start-content---->
 <div class="contact_desc">
     <div class="container">
-        <div class="contact-form">
-            <h2>Contact Us</h2>
-            <form method="post" action="contact-post.html" class="left_form">
-                <div>
-                    <span><label>NAME</label></span>
-                    <span><input name="userName" type="text" class="textbox"></span>
-                </div>
-                <div>
-                    <span><label>E-MAIL</label></span>
-                    <span><input name="userEmail" type="text" class="textbox"></span>
-                </div>
-                <div>
-                    <span><label>Fax</label></span>
-                    <span><input name="userPhone" type="text" class="textbox"></span>
-                </div>
-            </form>
-            <form class="right_form">
-                <div>
-                    <span><label>SUBJECT</label></span>
-                    <span><textarea name="userMsg"> </textarea></span>
-                </div>
-                <div>
-                    <span><input type="submit" value="Submit" class="myButton"></span>
-                </div>
-            </form>
-            <div class="clearfix"></div>
-        </div>
         <div class="content_bottom">
             <div class="company_address">
-                <h3>Location</h3>
-                <p>500 Lorem Ipsum Dolor Sit,</p>
-                <p>22-56-2-9 Sit Amet, Lorem,</p>
-                <p>USA</p>
-                <p>Phone:(00) 222 666 444</p>
-                <p>Fax: (000) 000 00 00 0</p>
-                <p>Email: <span><a href="mailto:info@mycompany.com">info(at)mycompany.com</a></span></p>
-                <p>Follow on: <span><a href="#">Facebook</a></span>, <span><a href="#">Twitter</a></span></p>
+                <h3>地址</h3>
+                <p>中国深圳深圳盐田沙头角二十四小区三栋103室</p>
+                <p> 邮编:518081</p>
+                <p>电话/传真(Tel/Fax): +86-755-25353958</p>
+                <p>手机(Mobile): +86-13728755777</p>
+                <p>Email: <span><a href="mailto:dingliyuanyang@189.cn  ">dingliyuanyang(at)189.cn  </a></span></p>
             </div>
             <div class="contact_info">
-                <h3>Find Us Here</h3>
+                <h3>地理位置</h3>
                 <div class="map">
                     <iframe width="100%" height="185" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                            src="https://maps.google.co.in/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265&amp;output=embed"></iframe>
+                            src="http://j.map.baidu.com/7MkjC"></iframe>
                     <br>
-                    <small><a
-                            href="https://maps.google.co.in/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265"
-                            style="color:#8C8061;text-align:left;font-size:1em">View Larger Map</a></small>
+                    <small><a href="http://j.map.baidu.com/7MkjC" target="_blank"
+                              style="color:#8C8061;text-align:left;font-size:1em">查看大地图</a></small>
                 </div>
             </div>
-            <div class="clearfix"></div>
         </div>
     </div>
 </div>
@@ -131,9 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="footer">
     <div class="container">
         <div class="copyright text-center">
-            <p>Copyright &copy; 2015.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/"
-                                                                                        target="_blank" title="模板之家">模板之家</a>
-                - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+            <p>Copyright &copy; 2015.Company name All rights reserved.</p>
         </div>
     </div>
 </div>
