--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header-banner">
     <div class="container">
         <div class="home">
-            <a href="index.html"><span class="glyphicon glyphicon-home"></span></a>
+            <a href="index.html"> <img src="images/logo_small.png" alt=""/></a>
         </div>
         <div class="header-top">
             <span class="menu"><img src="images/nav.png" alt=""/></span>
             <div class="top-menu">
                 <ul>
                     <nav class="cl-effect-13">
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a class="scroll" href="#news">News</a></li>
-                        <li><a href="typography.html">Typo</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="about.html"><h4>企业概况</h4></a></li>
+                        <li><a href="gallery.html"><h4>业务介绍</h4></a></li>
+                        <li><a class="scroll" href="#news"><h4>团队风采</h4></a></li>
+                        <li><a href="contact.html"><h4>联系我们</h4></a></li>
+                        <li><a href="typography.html"><h4>Typo</h4></a></li>
                     </nav>
                 </ul>
             </div>
@@ -68,20 +68,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="clearfix"></div>
         <div class="banner-info text-center">
-            <h1><a href="index.html">name</a></h1>
+            <h2><a href="index.html"> <img src="images/title.png" alt=""/></a></h2>
+            <h3> Shenzhen Great Strength Ocean Ship Store & Supply Co., Ltd</h3>
         </div>
         <div class="header-bottom-grids text-center">
             <div class="header-bottom-grid1">
                 <span class="glyphicon glyphicon-leaf"></span>
-                <h4>Claritas est etiam</h4>
+                <h4>质优价廉</h4>
             </div>
             <div class="header-bottom-grid2">
                 <span class="glyphicon glyphicon-certificate"></span>
-                <h4>Claritas est etiam</h4>
+                <h4>诚信热情</h4>
             </div>
             <div class="header-bottom-grid3">
                 <span class="glyphicon glyphicon-tree-deciduous"></span>
-                <h4>Claritas est etiam</h4>
+                <h4>快捷高效</h4>
             </div>
             <div class="header-bottom-grid4">
                 <span class="glyphicon glyphicon-screenshot"></span>
@@ -291,9 +292,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="footer">
     <div class="container">
         <div class="copyright text-center">
-            <p>Copyright &copy; 2015.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/"
-                                                                                        target="_blank" title="模板之家">模板之家</a>
-                - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+            <p>Copyright &copy; 2015.Company name All rights reserved.</p>
         </div>
     </div>
 </div>
