--- a/contact.html
+++ b/contact.html
@@ -45,11 +45,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="top-menu">
                 <ul>
                     <nav class="cl-effect-13">
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="index.html">News</a></li>
-                        <li><a href="typography.html">Typo</a></li>
-                        <li><a class="active" href="contact.html">Contact</a></li>
+                        <li><a href="about.html"><h4>企业概况</h4></a></li>
+                        <li><a href="gallery.html"><h4>业务介绍</h4></a></li>
+                        <li><a class="scroll" href="#news"><h4>团队风采</h4></a></li>
+                        <li><a href="contact.html"><h4>联系我们</h4></a></li>
                     </nav>
                 </ul>
             </div>
@@ -86,11 +85,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="contact_info">
                 <h3>地理位置</h3>
                 <div class="map">
-                    <iframe width="100%" height="185" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                    <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                             src="http://j.map.baidu.com/7MkjC"></iframe>
                     <br>
-                    <small><a href="http://j.map.baidu.com/7MkjC" target="_blank"
-                              style="color:#8C8061;text-align:left;font-size:1em">查看大地图</a></small>
+                    <a href="http://j.map.baidu.com/7MkjC" target="_blank"
+                       style="color:#8C8061;text-align:left;font-size:1em">查看大地图</a>
                 </div>
             </div>
         </div>
