--- a/single.html
+++ b/single.html
@@ -45,11 +45,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="top-menu">
                 <ul>
                     <nav class="cl-effect-13">
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a class="active" href="index.html">News</a></li>
-                        <li><a href="typography.html">Typo</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="about.html"><h4>企业概况</h4></a></li>
+                        <li><a href="gallery.html"><h4>业务介绍</h4></a></li>
+                        <li><a class="scroll" href="#news"><h4>团队风采</h4></a></li>
+                        <li><a href="contact.html"><h4>联系我们</h4></a></li>
                     </nav>
                 </ul>
             </div>
