--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="clearfix"></div>
         <div class="banner-info text-center">
-            <h1><a href="index.html">Gardening</a></h1>
+            <h2><a href="index.html"> <img src="images/title.png" alt=""/></a></h2>
+            <h3> Shenzhen Great Strength Ocean Ship Store & Supply Co., Ltd</h3>
         </div>
     </div>
 </div>
